--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["diary", "journal", "xiaokuixing"],
+  "keywords": [
+    "diary",
+    "journal",
+    "xiaokuixing"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "nodemailer": "^6.9.7",
+    "express": "^4.18.2",
     "mongodb": "^6.3.0",
-    "body-parser": "^1.20.2"
+    "nodemailer": "^7.0.10"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
@@ -25,4 +29,3 @@
     "node": ">=18.0.0"
   }
 }
-
